[package]
name = "sixth"
description = "The Sixth Programming language"
repository = "https://github.com/poggingfish/Sixth"
license = "GPL-2.0-or-later WITH Bison-exception-2.2"
keywords = ["language", "programming-language"]
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustyline = "10.0.0"